k8s-manifests/app-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
  namespace: application
  labels:
    app: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: app-service
          image: 092797494821.dkr.ecr.ap-south-1.amazonaws.com/app-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
