k8s-manifests/app-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: application
spec:
  selector:
    app: app-service
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
